--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
-node_modules/
+# dependencies
+/node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
+# environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# build
+/dist
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# typescript
+*.tsbuildinfo
