--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.10.1",
-    "nodemon": "^3.1.7"
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.11.19",
+    "nodemon": "^3.1.7",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
