--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # dependencies
-/node_modules
+node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -12,12 +12,13 @@ yarn-error.log*
 .env.production.local
 
 # build
-/dist
+dist
 /build
 
 # misc
 .DS_Store
 *.pem
+*.log
 
 # debug
 npm-debug.log*
