--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
   },
   "compilerOptions": {
     "types": ["node"],
-    "target": "es2016",
+    "typeRoots": ["./node_modules/@types"],
     "module": "commonjs",
     "rootDir": "./src",
     "moduleResolution": "node",
