--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "@types/node": "^22.14.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
