--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "postinstall": "npm install @types/node"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +22,6 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
-    "@types/node": "^22.14.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
