--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,16 @@
 {
-  "exclude": ["./coverage", "./dist", "__tests__", "jest.config.ts"],
-  "ts-node": {
-    "transpileOnly": true,
-    "files": true
-  },
   "compilerOptions": {
     "types": ["node"],
-    "typeRoots": ["./node_modules/@types"],
+    "target": "es2016",
     "module": "commonjs",
     "rootDir": "./src",
-    "moduleResolution": "node",
-    "checkJs": true,
     "outDir": "./dist",
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": false,
     "noImplicitAny": true,
     "skipLibCheck": true
-  }
+  },
+  "exclude": ["./coverage", "./dist", "__tests__", "jest.config.ts"]
 }
