--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "postinstall": "npm install @types/node"
+    "build": "npm install && tsc",
+    "postinstall": "npm install @types/node @types/express @types/cors @types/jsonwebtoken @types/bcryptjs"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +19,8 @@
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
