--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "npm install && tsc",
-    "postinstall": "npm install @types/node @types/express @types/cors @types/jsonwebtoken @types/bcryptjs"
+    "build": "tsc",
+    "postinstall": "npm install @types/node"
   },
   "keywords": [],
   "author": "",
@@ -18,11 +18,10 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.14.1",
-    "nodemon": "^3.1.7",
-    "typescript": "^5.3.3"
+    "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "@types/node": "^22.14.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
