--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "postinstall": "npm install @types/node"
+    "build": "npm install && npm install typescript @types/node @types/express @types/cors @types/jsonwebtoken @types/bcryptjs && tsc",
+    "prebuild": "npm install"
   },
   "keywords": [],
   "author": "",
@@ -19,10 +19,10 @@
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "node": "22.14.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
