--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "npm install && npm install typescript @types/node @types/express @types/cors @types/jsonwebtoken @types/bcryptjs && tsc",
-    "prebuild": "npm install"
+    "build": "tsc",
+    "postinstall": "npm install typescript @types/node @types/express @types/cors @types/jsonwebtoken @types/bcryptjs --save-dev"
   },
   "keywords": [],
   "author": "",
