--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "postinstall": "npm install typescript @types/node @types/express @types/cors @types/jsonwebtoken @types/bcryptjs --save-dev"
+    "build": "npx tsc",
+    "postinstall": "npm install @types/node"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
     "nodemon": "^3.1.7",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
