--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "typeRoots": ["./node_modules/@types"],
     "target": "es2016",
     "module": "commonjs",
     "rootDir": "./src",
@@ -7,10 +8,9 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true
+    "strict": false,
+    "noImplicitAny": true,
+    "skipLibCheck": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "coverage", "__tests__", "jest.config.ts"]
+  "exclude": ["./coverage", "./dist", "__tests__", "jest.config.ts"]
 }
