--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "npm install typescript && npx tsc",
+    "build": "npm install && npm install -g typescript && tsc",
     "postinstall": "npm install @types/node @types/express @types/cors @types/jsonwebtoken @types/bcryptjs"
   },
   "keywords": [],
