--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "npm install && npm install -g typescript && tsc",
-    "postinstall": "npm install @types/node @types/express @types/cors @types/jsonwebtoken @types/bcryptjs"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +18,7 @@
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
-    "nodemon": "^3.1.7",
-    "typescript": "^5.8.3"
+    "nodemon": "^3.1.7"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
