--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,20 @@
 {
+  "exclude": ["./coverage", "./dist", "__tests__", "jest.config.ts"],
+  "ts-node": {
+    "transpileOnly": true,
+    "files": true
+  },
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
     "rootDir": "./src",
-    "outDir": "./dist",
     "moduleResolution": "node",
+    "checkJs": true,
+    "outDir": "./dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true
-  },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "coverage", "__tests__", "jest.config.ts"]
+    "strict": false,
+    "noImplicitAny": true,
+    "skipLibCheck": true
+  }
 }
